Fix Google reCAPTCHA error message is not showing. Replace multiple metaboxs with tab design.

--- a/assets/scss/admin/_meta-box.scss
+++ b/assets/scss/admin/_meta-box.scss
@@ -146,3 +146,175 @@
 		}
 	}
 }
+
+// Tabs
+.dcf-tabs-wrapper {
+	display: block;
+	overflow: hidden;
+	margin: 1em 0;
+	padding: 0;
+	background: #fff;
+	border: 1px solid #e5e5e5;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+}
+
+.dcf-tabs,
+.ui-tabs.dcf-tabs {
+	border: none;
+	border-radius: 0;
+	margin: 0;
+	padding: 0;
+	background: none;
+	font-size: 1em;
+	font-family: inherit;
+
+	&:before, &:after {
+		display: table;
+		content: '';
+	}
+	&:after {
+		clear: both;
+	}
+
+	ul.dcf-tabs-list {
+		margin: 0;
+		width: 20%;
+		float: left;
+		line-height: 1em;
+		padding: 0 0 10px;
+		position: relative;
+		box-sizing: border-box;
+		border: none;
+		border-right: 1px solid #eee;
+		border-radius: 0;
+		background: #fafafa;
+
+		&::after {
+			content: '';
+			display: block;
+			width: 100%;
+			height: 9999em;
+			position: absolute;
+			bottom: -9999em;
+			left: 0;
+			background-color: #fafafa;
+			border-right: 1px solid #eee;
+		}
+
+		li {
+			margin: 0;
+			padding: 0;
+			display: block;
+			position: relative;
+			width: 100%;
+			background: none;
+			border-radius: 0;
+			border: none;
+
+			a {
+				margin: 0;
+				padding: 10px !important;
+				display: block;
+				box-shadow: none;
+				text-decoration: none;
+				line-height: 20px !important;
+				border-bottom: 1px solid #eee;
+				width: 100%;
+				box-sizing: border-box;
+
+				span {
+					margin-left: 0.618em;
+					margin-right: 0.618em;
+				}
+
+				&::before {
+					font-family: 'Dashicons';
+					speak: none;
+					font-weight: normal;
+					font-variant: normal;
+					text-transform: none;
+					-webkit-font-smoothing: antialiased;
+					content: '\f107';
+					text-decoration: none;
+				}
+			}
+
+			&.ui-tabs-active {
+				border-radius: 0;
+				border: none;
+				margin: 0;
+				padding: 0;
+
+				a {
+					color: #555;
+					position: relative;
+					background-color: #eee;
+				}
+			}
+
+			&.dcf-tab-list {
+				&--fields,
+				&--configuration,
+				&--mail,
+				&--message {
+					a::before {
+						display: inline-block;
+						float: left;
+						margin-right: 0.25em;
+					}
+				}
+				&--fields a::before {
+					content: "\f535";
+				}
+				&--mail a::before {
+					content: "\f466";
+				}
+				&--message a::before {
+					content: "\f473";
+				}
+			}
+
+			&.active a {
+				color: #555;
+				position: relative;
+				background-color: #eee;
+			}
+		}
+	}
+
+	.dcf_options_panel {
+		float: left;
+		width: 80%;
+		min-height: 175px;
+		box-sizing: border-box;
+		padding: 1em;
+		color: #555;
+	}
+
+	@media only screen and (max-width: 900px) {
+		ul.dcf-tabs-list {
+			width: 10%;
+
+			li {
+				a {
+					position: relative;
+					text-indent: -999px;
+					padding: 10px;
+
+					&::before {
+						position: absolute;
+						top: 0;
+						right: 0;
+						bottom: 0;
+						left: 0;
+						text-indent: 0;
+						text-align: center;
+						line-height: 40px;
+						width: 100%;
+						height: 40px;
+					}
+				}
+			}
+		}
+	}
+}
